Fix the tab is not centered

--- a/src/pages/Shared/Header/styles/index.scss
+++ b/src/pages/Shared/Header/styles/index.scss
@@ -10,8 +10,8 @@
     border-bottom: 1px solid $gray-background-color;
 
     a {
-        margin-top: 11px;
-        margin-bottom: 11px;
+        margin: 11px 0;
+        width: 360px;
 
         .header-logo {
             position: relative;
